Bug 480847 - Incorrect warning about Chromium proxy settings
Summary: Incorrect warning about Chromium proxy settings
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_proxy (other bugs)
Version First Reported In: 5.27.10
Platform: NixOS Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-04 11:50 UTC by somebody
Modified: 2024-02-13 16:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05
Sentry Crash Report:


Attachments
The mentioned screen. (166.91 KB, image/png)
2024-02-04 11:50 UTC, somebody
Details

Note You need to log in before you can comment on or make changes to this bug.
Description somebody 2024-02-04 11:50:41 UTC
Created attachment 165538 [details]
The mentioned screen.

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Open System Settings application
2. Enter Network > Settings > Proxy menu 
3. Select "Use manually specified proxy configuration and start typing in the text input "SOCKS proxy"

OBSERVED RESULT
A warning saying the following appears in the bottom of the application screen.
"Not all applications will use this proxy setting. In particular, Firefox and Chromium or anything derived from them, or anything using QtWebEngine - which includes Konqueror using the WebEnginePart, Akregator and Falkon - will not use these settings. Some applications may allow the proxy to be configured in their own settings."

But Chromium Version 121.0.6167.85 (Official Build) (64-bit) respects and uses these proxy settings. This leads to confusion and unnecessary browsing for Chromium's proxy settings if one doesn't try it beforehand.
This can be seen in Chromium's own docs here: https://chromium.googlesource.com/chromium/src/+/master/docs/linux/proxy_config.md
> When Chromium detects that it is running in GNOME or KDE, it will automatically use the appropriate standard proxy settings. 

EXPECTED RESULT
Chromium clause should be removed from this warning, or the specific version number below which Chromium doesn't use system proxy settings should be indicated.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux: Kernel 6.1.75
(available in About System)
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.113.0 
Qt Version: 5.15.12

ADDITIONAL INFORMATION
Apparently this was an issue on the Chromium's side in the past (see https://bugs.kde.org/show_bug.cgi?id=295065) but it is now resolved as can be seen in the last comment to the bug report I linked.
Comment 1 Nate Graham 2024-02-06 20:59:34 UTC
Fascinating. I guess that changed at some point in time. Changing user-facing test strings is very easy; wanna have a go at it? The code is here:

https://invent.kde.org/network/kio-extras/-/blob/master/kcms/proxy/kproxydlg.cpp?ref_type=heads#L196
Comment 2 somebody 2024-02-07 10:05:44 UTC
I committed the fix. Thanks for the pointer.
Comment 3 Nate Graham 2024-02-07 16:31:20 UTC
Thanks! I'll review it. Re-opening as the fix is not actually merged yet. :)
Comment 5 Nate Graham 2024-02-13 16:28:47 UTC
Git commit 99cb669882f1c7715c038b36253bd7c90625e8a5 by Nate Graham, on behalf of Chaotic Abide.
Committed on 13/02/2024 at 16:28.
Pushed by ngraham into branch 'master'.

kcms/proxy: Fix warning regarding Chromium

As Chromium no longer has an issue with recognizing KDE proxy settings, the
warning that says it has an issue was misleading and confusing to users.
FIXED-IN: 24.05

M  +3    -3    kcms/proxy/kproxydlg.cpp

https://invent.kde.org/network/kio-extras/-/commit/99cb669882f1c7715c038b36253bd7c90625e8a5