kcms/proxy: Fix warning regarding Chromium

As Chromium no longer has an issue with recognizing KDE proxy settings, the
warning that says it has an issue was misleading and confusing to users.

BUG: 480847
FIXED-IN: 24.05